# api/function-api/src/routes/v1_api.js
@@ -638,6 +638,28 @@ router.get(
 );
 
 router.options(
+  '/account/:accountId/subscription/:subscriptionId/boundary/:boundaryId/function/:functionId/build',
+  cors(corsManagementOptions)
+);
+router.post(
+  '/account/:accountId/subscription/:subscriptionId/boundary/:boundaryId/function/:functionId/build',
+  analytics.enterHandler(analytics.Modes.Administration),
+  cors(corsManagementOptions),
+  validate_schema({ params: require('./schemas/api_account') }),
+  authorize({ operation: 'function:put' }),
+  express.json({ limit: process.env.FUNCTION_SIZE_LIMIT || '500kb' }),
+  validate_schema({
+    params: require('./schemas/api_params'),
+    body: require('./schemas/function_specification'),
+  }),
+  user_agent(),
+  determine_provider(),
+  npmRegistry.handler(),
+  (req, res, next) => provider_handlers[req.provider].post_function_build(req, res, next),
+  analytics.finished
+);
+
+router.options(
   '/account/:accountId/subscription/:subscriptionId/boundary/:boundaryId/function/:functionId/build/:buildId',
   cors(corsManagementOptions)
 );
